package com.store.discount.models;

public enum CustomerType {
    EMPLOYEE,
    AFFILIATE,
    CUSTOMER
}
