package com.store.discount.models;

public enum ProductCategory {
    GROCERY,
    OTHER
}
