@startuml

title __STORE DISCOUNT SERVICE - UML Class Diagram__\n

    class com.store.discount.DiscountApplication {
        ~ environment : Environment
        + commandLineRunner()
        {static} + main()
    }

    class com.store.discount.controllers.CustomerController {
        + countCustomers()
        + createCustomer()
        + getAllCustomers()
    }

    class com.store.discount.controllers.ProductController {
        + createProduct()
        + getAllProducts()
    }

      class com.store.discount.controllers.TransactionController {
          + createTransaction()
          + getAllTransactions()
          + getBillDiscount()
      }

  
      class com.store.discount.models.Customer {
                - firstPurchaseDate : Date
                - id : long
                + Customer()
                + Customer()
                + getFirstPurchaseDate()
                + getId()
                + getType()
                + setFirstPurchaseDate()
                + setId()
                + setType()
      }
   
      enum com.store.discount.models.CustomerType {
            AFFILIATE
            CUSTOMER
            EMPLOYEE

      }
   
      class com.store.discount.models.DiscountedBill {
          - discountValue : double
          - netPayable : double
          - totalValue : double
          + getDiscountValue()
          + getNetPayable()
          + getTotalValue()
          + setDiscountValue()
          + setNetPayable()
          + setTotalValue()
      }

      class com.store.discount.models.Product {
          - id : long
          - price : double
          + Product()
          + Product()
          + getCategory()
          + getId()
          + getPrice()
          + setCategory()
          + setId()
          + setPrice()
      }

      enum com.store.discount.models.ProductCategory {
        GROCERY
        OTHER
      }

      interface com.store.discount.models.Purchase {
          {abstract} + getCategory()
          {abstract} + getCustomerId()
          {abstract} + getCustomerType()
          {abstract} + getFirstPurchase()
          {abstract} + getPrice()
          {abstract} + getProductId()
          {abstract} + getTransactionId()
      }

      class com.store.discount.models.Transaction {
          - customerId : long
          - id : long
          - productId : long
          + Transaction()
          + Transaction()
          + getCustomerId()
          + getId()
          + getProductId()
          + setCustomerId()
          + setId()
          + setProductId()
      }
  
   
      class com.store.discount.models.TransactionId {
          - customerId : long
          - id : long
          - productId : long
          + TransactionId()
          + TransactionId()
          + equals()
          + hashCode()
      }


      interface com.store.discount.repositories.CustomerRepository {
      }


      interface com.store.discount.repositories.ProductRepository {
      }


      interface com.store.discount.repositories.TransactionRepository {
        {abstract} + queryBy()
      }

      class com.store.discount.helpers.DiscountFormulas {
                {static} + getAffiliateDiscount()
                {static} + getCustomerDiscount()
                {static} + getEmployeeDiscount()
                {static} + getRegularDiscount()
                {static} + getTotalNonGroceryBillValue()
                {static} + getTotalNonGroceryBillValue()
                - DiscountFormulas()
        }


            class com.store.discount.helpers.Utility {
                {static} + createCustomer()
                {static} + createDate()
                {static} + createLoyalCustomer()
                {static} + createProduct()
                {static} + createProductWithRandomPrice()
                {static} + getBillTotalValue()
                {static} + getDiscountedBill()
                {static} + isOldCustomer()
            }

  com.store.discount.controllers.CustomerController o-- com.store.discount.repositories.CustomerRepository : customerRepository
  com.store.discount.controllers.ProductController o-- com.store.discount.repositories.ProductRepository : productRepository
  com.store.discount.controllers.TransactionController o-- com.store.discount.repositories.TransactionRepository : transactionRepository
  com.store.discount.models.Customer "1" o--  "1" com.store.discount.models.CustomerType : type
  com.store.discount.models.Product "1" o-- "1" com.store.discount.models.ProductCategory : category
  com.store.discount.models.Purchase .. com.store.discount.models.Customer : customer
  com.store.discount.models.Purchase .. com.store.discount.models.Product : product
  com.store.discount.models.Transaction .up.|> java.io.Serializable
  com.store.discount.models.TransactionId .up.|> java.io.Serializable
  com.store.discount.controllers.TransactionController .. com.store.discount.models.Transaction : transactionRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
